Source/WebCore/platform/graphics/blackberry/PathBlackBerry.cpp
@@ -263,12 +263,12 @@ void GraphicsContext::drawLineForDocumentMarker(const FloatPoint& pt, float widt
     platformContext()->addDrawLineForDocumentMarker(pt, width, (BlackBerry::Platform::Graphics::DocumentMarkerLineStyle)style);
 }
 
-void GraphicsContext::drawLineForText(const FloatPoint& pt, float width, bool printing)
+void GraphicsContext::drawLineForText(const FloatRect& bounds, bool printing)
 {
     if (paintingDisabled())
         return;
 
-    platformContext()->addDrawLineForText(pt, width, printing);
+    platformContext()->addDrawLineForText(bounds.location, bounds.width(), printing);
 }
 
 // FIXME: don't ignore the winding rule. https://bugs.webkit.org/show_bug.cgi?id=107064
