Source/WebCore/platform/graphics/cairo/GraphicsContextCairo.cpp
@@ -614,7 +614,7 @@ void GraphicsContext::drawFocusRing(const Vector<IntRect>& rects, int width, int
     cairo_restore(cr);
 }
 
-void GraphicsContext::drawLineForText(const FloatPoint& origin, float width, bool)
+void GraphicsContext::drawLineForText(const FloatRect& bounds, bool)
 {
     if (paintingDisabled())
         return;
@@ -623,16 +623,16 @@ void GraphicsContext::drawLineForText(const FloatPoint& origin, float width, boo
     cairo_save(cairoContext);
 
     // This bumping of <1 stroke thicknesses matches the one in drawLineOnCairoContext.
-    FloatPoint endPoint(origin + IntSize(width, 0));
-    FloatRect lineExtents(origin, FloatSize(width, strokeThickness()));
+    FloatPoint endPoint(bounds.location() + IntSize(bounds.width(), 0));
+    FloatRect lineExtents(bounds.location(), FloatSize(bounds.width(), strokeThickness()));
 
     ShadowBlur& shadow = platformContext()->shadowBlur();
     if (GraphicsContext* shadowContext = shadow.beginShadowLayer(this, lineExtents)) {
-        drawLineOnCairoContext(this, shadowContext->platformContext()->cr(), origin, endPoint);
+        drawLineOnCairoContext(this, shadowContext->platformContext()->cr(), bounds.location(), endPoint);
         shadow.endShadowLayer(this);
     }
 
-    drawLineOnCairoContext(this, cairoContext, origin, endPoint);
+    drawLineOnCairoContext(this, cairoContext, bounds.location(), endPoint);
     cairo_restore(cairoContext);
 }
 
