Source/WebCore/platform/win/WebCoreTextRenderer.cpp
@@ -76,7 +76,8 @@ static void doDrawTextAtPoint(GraphicsContext& context, const String& text, cons
         underlinePoint.move(beforeWidth, 1);
 
         context.setStrokeColor(color, ColorSpaceDeviceRGB);
-        context.drawLineForText(underlinePoint, underlinedWidth, false);
+        FloatRect bounds(underlinePoint, FloatSize(underlinedWidth, context.strokeThickness()));
+        context.drawLineForText(bounds, false);
     }
 }
 
